# tictactoe

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  game.py  noxfile.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/TicTacToe/: __main__.py  game.py  player.py
src/TicTacToe _ MaxMin/: __init__.py  __main__.py
src/tictactoe/: game.py
tests/: __init__.py  test_board.py  test_main.py  test_player.py
tictactoe/: __main__.py  game.py  player.py
tictactoe/player/: ai.py  human.py
